# networklytics-mcp

./: README.md  pyproject.toml  smithery.yaml
src/networklytics_mcp/: __init__.py  server.py
