[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "networklytics-mcp"
version = "0.1.1"
description = "MCP server for NetworkLytics — YouTube comment network analysis for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "youtube", "network-analysis", "sna", "ai-agent", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
networklytics-mcp = "networklytics_mcp.server:main"

[project.urls]
Homepage = "https://networklytics.net"
Repository = "https://github.com/Leekangbum/networklytics-mcp"
Documentation = "https://networklytics.net/api/v1/schema/"

[tool.hatch.build.targets.wheel]
packages = ["src/networklytics_mcp"]
